# aidemo

aidemo/: README.md  gradle.properties  local.properties  settings.gradle
aidemo/app/: build.gradle
aidemo/app/app/main/: AndroidManifest.xml
aidemo/app/app/main/assets/face_ldmks/: rfb_landm_face_320_320_freeze_sim.opt.tnnmodel  rfb_landm_face_320_320_freeze_sim.opt.tnnproto  rfb_landm_face_320_320_sim.opt.tnnmodel  rfb_landm_face_320_320_sim.opt.tnnproto
aidemo/app/app/main/cpp/: CMakeLists.txt
aidemo/app/app/main/cpp/src/: Interpreter.cpp  Interpreter.h  Types.h  main.cpp  object_detection.cpp  object_detection.h
aidemo/app/app/main/java/com/cv/tnn/activity/: MainActivity.java  WelcomeActivity.java
aidemo/app/app/main/java/com/cv/tnn/model/: Detector.java  DrawImage.java  FrameInfo.java  KeyPoint.java  Point.java  Skeleton.java
aidemo/app/app/main/res/drawable/: cpu_gpu_bg.xml
aidemo/app/app/main/res/layout/: activity_main.xml  activity_welcome.xml
aidemo/app/app/main/res/values/: colors.xml  strings.xml  themes.xml
aidemo/app/app/main/res/values-night/: themes.xml
aidemo/gradle/wrapper/: gradle-wrapper.properties
detector/: build.gradle
detector/app/: build.gradle
detector/app/src/main/: AndroidManifest.xml
detector/app/src/main/cpp/: CMakeLists.txt  jni_interface.cpp
